# damnit-knockoff

./: .gitignore  DAMNIT Knockoff Site.json  Dockerfile  README.md  basic.py  context-clean.py  context.py  docker-compose.yml  example.py  pyproject.toml  test.py
docs/proof-of-concept-showcase/: 0-intro.md  1-basic.md  1-basic.py  2-better.md  3-web.md
src/damnit_knockoff/: api.py  cli.py  context_reader.py  db.py  demo_context.py  main.py
