[tool.poetry]
name = "damnit-knockoff"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "damnit_knockoff", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beanie = "^1.18.0"
typer = "^0.7.0"
loguru = "^0.7.0"
rich = "^13.3.4"
poethepoet = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
